tests/suite/snapshots/suite__check__tests__check__bad-class-shadowing3.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-class-shadowing3.xi:2:5]
   │
 2 │     a, a: int
   ·     ────┬────  
   ·         ╰────── Name already bound in environment
───╯

